--- a/building-secure-python-applications/final-project/templates/dogecoin_page.html
+++ b/building-secure-python-applications/final-project/templates/dogecoin_page.html
@@ -6,6 +6,7 @@
 <h1 class="coin-title">Dogecoin</h1>
 <div class="info-box">
     <h2>Much value. Very crypto</h2>
+    <img class="responsive-img" src="{{ url_for('static', filename=" dogecoin.jpg") }}" alt="dogecoin picture">
     <h3>Current Trading Price as of {{ date_and_time }} is <br />{{ price }}</h3>
     <p>Dogecoin is a cryptocurrency that was created as a joke — its name is a reference to a
         popular Internet meme. It shares many features with Litecoin. However, unlike Litecoin,
