--- a/building-secure-python-applications/final-project/templates/ethereum_page.html
+++ b/building-secure-python-applications/final-project/templates/ethereum_page.html
@@ -6,6 +6,7 @@
 <h1 class="coin-title">Ethereum</h1>
 <div class="info-box">
     <h2>”Blockchain 2.0”</h2>
+    <img class="responsive-img" src="{{ url_for('static', filename=" ethereum.jpg") }}" alt="ethereum picture">
     <h3>Current Trading Price as of {{ date_and_time }} is <br />{{ price }}</h3>
     <p>Ethereum is a decentralized computing platform that uses ETH (also called Ether)
         to pay transaction fees (or “gas”). Developers can use Ethereum to run decentralized
